<resources>
    <string name="app_name">lesson1</string>
    <string name="back">Back</string>
    <string name="film_name">Avengers: End Game</string>
    <string name="genres">Action, Adventure, Fantasy</string>
    <string name="num_reviews">125 REVIEWS</string>
    <string name="storyline">Storyline</string>
    <string name="storyline_text">After the devastating events of Avengers: Infinity War,
        the universe is in ruins. With the help of remaining allies, the Avengers assemble
        once more in order to reverse Thanos actions and restore balance to the universe.</string>
    <string name="cast">Cast</string>
    <string name="age">13+</string>
    <string name="ironMan">Robert Downey Jr.</string>
    <string name="captainA">Chris Evans</string>
    <string name="hulk">Mark Ruffalo</string>
    <string name="thor">Chris Hemsworth</string>
    <string name="duration">137 MIN</string>
    <string name="movies_list">Movies list</string>
</resources>