<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@color/back"
    tools:context="com.example.lesson3.MainActivity">

    <androidx.constraintlayout.widget.Guideline
        android:id="@+id/guideline_start"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:orientation="vertical"
        app:layout_constraintGuide_begin="16dp" />

    <androidx.constraintlayout.widget.Guideline
        android:id="@+id/guideline_end"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:orientation="vertical"
        app:layout_constraintGuide_end="16dp" />

    <ImageView
        android:id="@+id/img_back"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:scaleType="centerCrop"
        android:src="@mipmap/back"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent" />

    <ImageView
        android:id="@+id/imageView"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:src="@mipmap/mask"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent" />

    <ImageView
        android:id="@+id/img_back_arrow"
        android:layout_width="6dp"
        android:layout_height="10dp"
        android:layout_marginEnd="8dp"
        android:src="@mipmap/path"
        app:layout_constraintBottom_toBottomOf="@id/tv_back"
        app:layout_constraintEnd_toStartOf="@id/tv_back"
        app:layout_constraintTop_toTopOf="@id/tv_back" />

    <TextView
        android:id="@+id/tv_back"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginStart="32dp"
        android:layout_marginTop="56dp"
        android:text="@string/back"
        android:textColor="@color/back_grey"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent" />

    <TextView
        android:id="@+id/age"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:text="@string/age"
        android:textColor="@color/white"
        android:textSize="18sp"
        app:layout_constraintBottom_toTopOf="@id/tv_film"
        app:layout_constraintStart_toStartOf="@id/guideline_start" />


    <TextView
        android:id="@+id/tv_film"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:text="@string/film_name"
        android:textColor="@color/film_name"
        android:textSize="59sp"
        android:textStyle="bold"
        app:layout_constraintBottom_toBottomOf="@id/img_back"
        app:layout_constraintEnd_toEndOf="@id/guideline_end"
        app:layout_constraintStart_toStartOf="@+id/guideline_start"
        app:layout_constraintTop_toBottomOf="@id/img_back" />

    <TextView
        android:id="@+id/tv_genre"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="8dp"
        android:text="@string/genres"
        android:textColor="@color/pink"
        android:textSize="20sp"
        app:layout_constraintStart_toStartOf="@id/guideline_start"
        app:layout_constraintTop_toBottomOf="@id/tv_film" />


    <RatingBar
        android:id="@+id/rating"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginStart="12dp"
        android:numStars="5"
        android:progressBackgroundTint="@color/star_grey"
        android:progressTint="@color/pink"
        android:rating="4"
        android:scaleX="0.6"
        android:scaleY="0.6"
        android:stepSize="0.5"
        android:transformPivotY="0dp"
        app:layout_constraintTop_toBottomOf="@id/tv_genre"
        android:layout_marginTop="2dp"
        app:layout_constraintStart_toStartOf="parent"/>

    <TextView
        android:id="@+id/tv_num_reviews"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginStart="9dp"
        android:layout_marginEnd="24dp"
        android:text="@string/num_reviews"
        android:textColor="@color/back_grey"
        android:textSize="20sp"
        android:textStyle="bold"
        app:layout_constraintEnd_toStartOf="@+id/guideline_end"
        app:layout_constraintStart_toEndOf="@id/rating"
        app:layout_constraintTop_toTopOf="@id/rating" />

    <TextView
        android:id="@+id/tv_storyline"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/storyline"
        android:textColor="@color/white"
        android:textSize="20sp"
        android:textStyle="bold"
        app:layout_constraintStart_toStartOf="@id/guideline_start"
        app:layout_constraintTop_toBottomOf="@id/rating"
        />

    <TextView
        android:id="@+id/storyline_text"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:layout_marginTop="4dp"
        android:paddingTop="8dp"
        android:paddingBottom="8dp"
        android:text="@string/storyline_text"
        android:textColor="@color/text_grey"
        android:textSize="18sp"
        app:layout_constraintEnd_toEndOf="@id/guideline_end"
        app:layout_constraintStart_toStartOf="@id/guideline_start"
        app:layout_constraintTop_toBottomOf="@id/tv_storyline" />

    <TextView
        android:id="@+id/cast"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:layout_marginTop="24dp"
        android:text="@string/cast"
        android:textColor="@color/white"
        android:textSize="20sp"
        android:textStyle="bold"
        app:layout_constraintStart_toStartOf="@id/guideline_start"
        app:layout_constraintTop_toBottomOf="@id/storyline_text" />

    <ImageView
        android:id="@+id/img_ironMan"
        android:layout_width="80dp"
        android:layout_height="80dp"
        android:layout_marginTop="7dp"
        android:src="@mipmap/iron_man"
        app:layout_constraintEnd_toStartOf="@id/img_captainA"
        app:layout_constraintStart_toStartOf="@id/guideline_start"
        app:layout_constraintTop_toBottomOf="@id/cast" />

    <TextView
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:layout_marginTop="6dp"
        android:text="@string/ironMan"
        android:textColor="@color/white"
        android:textSize="14sp"
        android:textStyle="bold"
        app:layout_constraintEnd_toEndOf="@id/img_ironMan"
        app:layout_constraintStart_toStartOf="@id/img_ironMan"
        app:layout_constraintTop_toBottomOf="@id/img_ironMan" />


    <ImageView
        android:id="@+id/img_captainA"
        android:layout_width="80dp"
        android:layout_height="80dp"
        android:layout_marginStart="8dp"
        android:src="@mipmap/captain_a"
        app:layout_constraintEnd_toStartOf="@id/img_hulk"
        app:layout_constraintStart_toEndOf="@id/img_ironMan"
        app:layout_constraintTop_toTopOf="@id/img_ironMan" />

    <TextView
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:layout_marginTop="6dp"
        android:text="@string/captainA"
        android:textColor="@color/white"
        android:textSize="14sp"
        android:textStyle="bold"
        app:layout_constraintEnd_toEndOf="@id/img_captainA"
        app:layout_constraintStart_toStartOf="@id/img_captainA"
        app:layout_constraintTop_toBottomOf="@id/img_captainA" />

    <ImageView
        android:id="@+id/img_hulk"
        android:layout_width="80dp"
        android:layout_height="80dp"
        android:layout_marginStart="8dp"
        android:src="@mipmap/hulk"
        app:layout_constraintEnd_toStartOf="@id/img_thor"
        app:layout_constraintStart_toEndOf="@id/img_captainA"
        app:layout_constraintTop_toTopOf="@id/img_captainA" />

    <TextView
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:layout_marginTop="6dp"
        android:text="@string/hulk"
        android:textColor="@color/white"
        android:textSize="14sp"
        android:textStyle="bold"
        app:layout_constraintEnd_toEndOf="@id/img_hulk"
        app:layout_constraintStart_toStartOf="@id/img_hulk"
        app:layout_constraintTop_toBottomOf="@id/img_hulk" />

    <ImageView
        android:id="@+id/img_thor"
        android:layout_width="80dp"
        android:layout_height="80dp"
        android:layout_marginStart="8dp"
        android:src="@mipmap/thor"
        app:layout_constraintEnd_toStartOf="@id/guideline_end"
        app:layout_constraintStart_toEndOf="@id/img_hulk"
        app:layout_constraintTop_toTopOf="@id/img_hulk" />

    <TextView
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:layout_marginTop="6dp"
        android:text="@string/thor"
        android:textColor="@color/white"
        android:textSize="14sp"
        android:textStyle="bold"
        app:layout_constraintEnd_toEndOf="@id/img_thor"
        app:layout_constraintStart_toStartOf="@id/img_thor"
        app:layout_constraintTop_toBottomOf="@id/img_thor" />


</androidx.constraintlayout.widget.ConstraintLayout>