<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@color/back_fragment">

    <androidx.constraintlayout.widget.Guideline
        android:id="@+id/guideline_end"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:orientation="vertical"
        app:layout_constraintGuide_end="6dp"/>

    <androidx.constraintlayout.widget.Guideline
        android:id="@+id/guideline_start"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:orientation="vertical"
        app:layout_constraintGuide_begin="6dp"/>

    <androidx.constraintlayout.widget.Guideline
        android:id="@+id/guideline_bot"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:orientation="horizontal"
        app:layout_constraintGuide_end="48dp" />

    <ImageView
        android:id="@+id/movie_1_list"
        android:layout_width="0dp"
        android:layout_height="0dp"
        android:layout_margin="3dp"
        android:scaleType="centerCrop"
        android:src="@drawable/movie_1_list"
        app:layout_constraintBottom_toBottomOf="@id/guideline_bot"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintVertical_bias="0.0"
        />

    <ImageView
        android:id="@+id/mask_1"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:src="@drawable/mask_1"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintBottom_toBottomOf="@id/guideline_bot"
        android:scaleType="centerCrop"/>

    <ImageView
        android:id="@+id/like"
        android:layout_width="16dp"
        android:layout_height="14dp"
        android:layout_marginTop="13dp"
        android:src="@drawable/like"
        app:layout_constraintEnd_toStartOf="@+id/guideline_end"
        app:layout_constraintTop_toTopOf="parent" />

    <ImageView
        android:id="@+id/rectangle_age"
        android:layout_width="24dp"
        android:layout_height="16dp"
        android:src="@drawable/rectangle"
        app:layout_constraintStart_toStartOf="@id/guideline_start"
        app:layout_constraintTop_toTopOf="@id/like"
        app:layout_constraintBottom_toBottomOf="@id/like" />

    <TextView
        android:id="@+id/age"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/age"
        android:textColor="@color/white"
        android:textStyle="bold"
        android:textSize="6sp"
        app:layout_constraintStart_toStartOf="@id/rectangle_age"
        app:layout_constraintEnd_toEndOf="@id/rectangle_age"
        app:layout_constraintTop_toTopOf="@id/rectangle_age"
        app:layout_constraintBottom_toBottomOf="@id/rectangle_age"/>

    <TextView
        android:id="@+id/tv_genre"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="8dp"
        android:text="@string/genres"
        android:textColor="@color/pink"
        android:gravity="left"
        android:textSize="12sp"
        app:layout_constraintStart_toStartOf="@id/guideline_start"
        app:layout_constraintBottom_toTopOf="@id/rating" />


    <RatingBar
        android:id="@+id/rating"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        style="@style/Widget.AppCompat.RatingBar.Small"
        android:numStars="5"
        android:progressBackgroundTint="@color/star_grey"
        android:progressTint="@color/pink"
        android:rating="4"
        android:stepSize="0.5"
        app:layout_constraintStart_toStartOf="@id/guideline_start"
        app:layout_constraintBottom_toBottomOf="@id/guideline_bot" />

    <TextView
        android:id="@+id/tv_num_reviews"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginStart="9dp"
        android:layout_marginEnd="24dp"
        android:text="@string/num_reviews"
        android:textColor="@color/back_grey"
        android:textSize="8sp"
        android:textStyle="bold"
        app:layout_constraintStart_toEndOf="@id/rating"
        app:layout_constraintTop_toTopOf="@id/rating" />

    <TextView
        android:id="@+id/film_name"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/film_name"
        android:textColor="@color/white"
        android:textSize="14sp"
        android:textStyle="bold"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@id/guideline_bot"
        android:layout_marginStart="20dp"
        android:layout_marginTop="8dp" />

    <TextView
        android:id="@+id/duration"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:textStyle="bold"
        android:textColor="@color/text_grey"
        android:textSize="8sp"
        android:text="@string/duration"
        app:layout_constraintTop_toBottomOf="@id/film_name"
        app:layout_constraintStart_toStartOf="@id/film_name" />

</androidx.constraintlayout.widget.ConstraintLayout>